--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="home.css">
+<link rel="apple-touch-icon" sizes="120x120" href="chess.png">
 <title>Chess Club</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
